# finskills

./: .gitignore  LICENSE  Makefile  README.md  README.zh.md  README_CN.md  Skills深度逻辑审查-总结.md  Skills深度逻辑审查-第1部分.md  代码待办事项总结.md  修正完成总结.md  深度逻辑修正完成报告.md
HK-market/: README.md
config/: data_sources.yaml
docs/: A股Skills中优先级全部完成报告.md  A股Skills中优先级进度报告.md  A股Skills全部完成最终报告.md  A股Skills完成总结.md  A股Skills完成进度.md  A股Skills待完成清单.md  A股Skills高优先级全部完成报告.md  A股Skills高优先级完成报告.md  BATCH_TEST_GUIDE.md  China-market-skills测试报告.md  China-market-skills潜在问题分析.md  FILE_ORGANIZATION_SUMMARY.md  FINAL_TEST_SUMMARY.md  HOW_TO_USE_SKILLS.md  P0问题修复总结.md  P1问题1-健康检查机制实现总结.md  P1问题2-MVP实施计划.md  P1问题2-备用数据源设计方案.md  P1问题3-5个Skills阈值回测汇总报告.md  P1问题3-阈值回测完成总结.md  P1问题3-阈值回测验证计划.md  P1问题4-文档补充完成总结.md  P1问题4-文档补充计划.md  QUICK_START.md  QUICK_TEST_GUIDE.md  README.md  README.zh.md  (+43 more)
view-service/: AKSHARE_HEALTH_CHECK.md  DEVELOPMENT.md  README.md  backtest_block_deal.py  backtest_concept_board.py  backtest_equity_pledge.py  backtest_framework.py  backtest_fund_flow.py  backtest_limit_up.py  pyproject.toml  test_health_check.py
view-service/tests/: test_backtest_framework.py  test_view_runner.py
view-service/view_service/: akshare_health.py  backtest_framework.py  health_check_cli.py  healthcheck_cn.py  http_server.py  provider_akshare.py  provider_base.py  smoke_cn_skills.py  tool_registry.py  view_runner.py  views_cn.py
view-service/view_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
view-service/view_service/backtests/: __init__.py  block_deal.py
(+314 files in other folders)
