[project]
name = "view-service"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
  "akshare>=1.15.0",
  "pandas>=1.5.0",
  "numpy>=1.23.0",
  "requests>=2.31.0",
]

[project.scripts]
finskills-view-service = "view_service.http_server:main"
finskills-cn-healthcheck = "view_service.healthcheck_cn:main"
finskills-cn-smoke = "view_service.smoke_cn_skills:main"
